--- a/files/destination.html
+++ b/files/destination.html
@@ -33,7 +33,8 @@
   <a class="skip-to-content" href="#main">Skip to content</a>
   <header class="primary-header flex">
     <div>
-      <img src="/starter-code/assets/shared/logo.svg" alt="space tourism logo" class="logo">
+      <img src="../starter-code/assets/shared/logo.svg" alt="space tourism logo" class="logo">
+      <!-- <img src="../starter-code/assets/shared/logo.svg" alt="space tourism logo" class="logo"> -->
     </div>
     <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
         aria-expanded="false">Menu</span></button>
@@ -45,8 +46,7 @@
               aria-hidden="true">01</span>Destination</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span
               aria-hidden="true">02</span>Crew</a>
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span
-              aria-hidden="true">03</span>Technology</a>
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="https://www.spacex.com/">more!</a>
       </ul>
     </nav>
   </header>
@@ -55,8 +55,8 @@
     <h1 class="numbered-title"><span aria-hidden="true">01</span> Pick your destination</h1>
 
     <picture>
-      <!-- <source srcset="/starter-code/assets/destination/image-moon.webp" type="image/webp"> -->
-      <img src="/starter-code/assets/destination/image-moon.png" alt="the moon">
+      <!-- <source srcset="../starter-code/assets/destination/image-moon.webp" type="image/webp"> -->
+      <img src="../starter-code/assets/destination/image-moon.png" alt="the moon">
     </picture>
 
 
@@ -90,7 +90,7 @@
 
 
 </body>
-<script src="/nav.js"></script>
-<script src="/files/data-copy.js"></script>
+<script src="../nav.js"></script>
+<script src="../files/data-copy.js"></script>
 
 </html>
