--- a/files/crew.html
+++ b/files/crew.html
@@ -40,7 +40,7 @@
         aria-expanded="false">Menu</span></button>
     <nav>
       <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="/main_doc.html"><span
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="../index.html"><span
               aria-hidden="true">00</span>Home</a>
         <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span
               aria-hidden="true">01</span>Destination</a>
